# cooper

./: .dockerignore  .gitignore  .vercelignore  Cargo.toml  Dockerfile  README.md  build.rs  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml  cicd.yml  cleanup.yml
archive/: Cargo.toml
archive/core/src/: skill.rs  system_prompt.rs  types.rs
archive/core/src/provider/: anthropic_messages.rs
archive/docs/: configuration.md  context.md  providers.md
archive/src/: cli.rs  main.rs  session.rs  tools.rs
archive/wasm/: style.css
archive/wasm/src/: lib.rs  tools.rs
core/: Cargo.toml
core/src/: agent.rs  lib.rs  provider.rs  system_prompt.rs  tools.rs  types.rs
core/src/provider/: anthropic_messages.rs  mod.rs  openai_completions.rs
core/src/providers/: mod.rs  openai_completions.rs  openai_wire.rs
dev-server/: Cargo.toml
dev-server/src/: main.rs
docs/: cli.md  sessions.md  skills.md  tools.md
e2e/: Cargo.toml  README.md
e2e/examples/: screenshots.rs
e2e/src/: lib.rs
e2e/tests/: context_customization.rs  duckdb_tool.rs  local_provider.rs  multi_turn_conversation.rs  no_empty_response_block.rs  prompt_response.rs  python_tool.rs  session_history_is_message_level.rs  session_persistence.rs  tool_call.rs
mock-server/: Cargo.toml
mock-server/fixtures/: reasoning_reply.yaml  simple_reply.yaml  tool_call_roundtrip.yaml
mock-server/src/: fixture.rs  lib.rs  main.rs  server.rs  wire.rs
src/: agent.rs  cli.rs  config.rs  main.rs  output.rs  providers.rs  sessions.rs  skills.rs  test_support.rs  tools.rs  web.rs
src/core/: Cargo.toml
src/desktop/: Cargo.toml
src/providers/: mod.rs  openai_completions.rs
src/web/: Cargo.toml
tests/cli/: chat.rs  main.rs  prompt.rs  sessions.rs  support.rs  web.rs
wasm/: Cargo.toml  app.js  index.html  style.css
wasm/src/: agent.rs  lib.rs  session.rs  session_logger.rs  tools.rs
web/: Cargo.toml
web/src/: lib.rs
web/www/: about.js  analytics.js  app.js  builtin-tools.js  chart-common.js  chart-render.js  chart-tool.js  context.js  duckdb-tool.js  git-accounts.js  index.html  local-models.js  markdown.js  media-render.js  media-tools.js  oauth-callback.html  opfs-writer-worker.js  python-tool.js  repo-attach.js  sessions.js  settings.js  style.css  svg-sanitize.js  tools.js  worker.js  workspace-fs.js  workspace-tools.js  workspace.js
