[workspace]
members = ["core", "web"]
resolver = "2"

[package]
name = "agent-cooper"
version = "0.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
cooper-core = { path = "core" }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
