[package]
name = "cooper-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "cooper_core"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
web-time = "1"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
