[package]
name = "cooper-core"
version = "0.0.0"
edition = "2024"

[lib]
name = "cooper_core"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
futures-util = "0.3.32"
minijinja = "2.21.0"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
wiremock = "0.6.5"
