[package]
name = "cooper-e2e"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.9"
chromiumoxide = "0.9.1"
cooper-mock-server = { path = "../mock-server" }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
