[package]
name = "cooper-web"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.89"
console_error_panic_hook = "0.1"
cooper-core = { path = "../core" }
futures-channel = "0.3.32"
futures-util = "0.3.32"
js-sys = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
